--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/web.config
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/web.config
@@ -23,6 +23,7 @@
         <binding name="UsuarioWSPortBinding" />
         <binding name="ClienteWSPortBinding" />
         <binding name="LocalWSPortBinding" />
+        <binding name="InventarioWSPortBinding" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -41,6 +42,9 @@
       <endpoint address="http://localhost:8080/FrutillaWS/LocalWS"
         binding="basicHttpBinding" bindingConfiguration="LocalWSPortBinding"
         contract="LocalWS.LocalWS" name="LocalWSPort" />
+      <endpoint address="http://localhost:8080/FrutillaWS/InventarioWS"
+        binding="basicHttpBinding" bindingConfiguration="InventarioWSPortBinding"
+        contract="InventarioWS.InventarioWS" name="InventarioWSPort" />
     </client>
   </system.serviceModel>
   <system.codedom>
