--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/web.config
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/web.config
@@ -23,6 +23,7 @@
         <binding name="ClienteWSPortBinding" />
         <binding name="LocalWSPortBinding" />
         <binding name="EmpleadoWSPortBinding" />
+        <binding name="InventarioWSPortBinding" />
         <binding name="PedidoWSPortBinding" />
       </basicHttpBinding>
     </bindings>
@@ -42,6 +43,9 @@
       <endpoint address="http://localhost:8080/FrutillaWS/EmpleadoWS"
         binding="basicHttpBinding" bindingConfiguration="EmpleadoWSPortBinding"
         contract="EmpleadoWS.EmpleadoWS" name="EmpleadoWSPort" />
+      <endpoint address="http://localhost:8080/FrutillaWS/InventarioWS"
+        binding="basicHttpBinding" bindingConfiguration="InventarioWSPortBinding"
+        contract="InventarioWS.InventarioWS" name="InventarioWSPort" />
       <endpoint address="http://localhost:8080/FrutillaWS/PedidoWS"
         binding="basicHttpBinding" bindingConfiguration="PedidoWSPortBinding"
         contract="PedidoWS.PedidoWS" name="PedidoWSPort" />
