--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/web.config
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/web.config
@@ -25,6 +25,7 @@
         <binding name="EmpleadoWSPortBinding" />
         <binding name="InventarioWSPortBinding" />
         <binding name="PedidoWSPortBinding" />
+        <binding name="ComprobanteWSPortBinding" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -49,6 +50,9 @@
       <endpoint address="http://localhost:8080/FrutillaWS/PedidoWS"
         binding="basicHttpBinding" bindingConfiguration="PedidoWSPortBinding"
         contract="PedidoWS.PedidoWS" name="PedidoWSPort" />
+      <endpoint address="http://localhost:8080/FrutillaWS/ComprobanteWS"
+        binding="basicHttpBinding" bindingConfiguration="ComprobanteWSPortBinding"
+        contract="ComprobanteWS.ComprobanteWS" name="ComprobanteWSPort" />
     </client>
   </system.serviceModel>
   <system.codedom>
