--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/web.config
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/web.config
@@ -68,4 +68,19 @@
 			</authorization>
 		</system.web>
 	</location>
+	<location path="RecuperarCuenta.aspx">
+		<system.web>
+			<authorization>
+				<allow users="*"/>
+			</authorization>
+		</system.web>
+	</location>
+
+	<location path="RestablecerContrasena.aspx">
+		<system.web>
+			<authorization>
+				<allow users="*"/>
+			</authorization>
+		</system.web>
+	</location>
 </configuration>
