Actualizacion de home de clientes y referencia de WS

--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/LocalWebService.csproj
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/LocalWebService.csproj
@@ -352,8 +352,10 @@
     <Content Include="Public\fonts\css\v4-shims.min.css" />
     <Content Include="Public\fonts\css\v5-font-face.css" />
     <Content Include="Public\fonts\css\v5-font-face.min.css" />
-    <Content Include="Public\images\homeFrutas.jpg" />
+    <Content Include="Public\images\fruteria-letras.jpg" />
+    <Content Include="Public\images\fruteria-sociales.jpg" />
     <Content Include="Public\images\homeSnacks.jpg" />
+    <Content Include="Public\images\homeFrutas.jpg" />
     <Content Include="Public\images\homeProductos.jpg" />
     <Content Include="Public\images\productosImagen.png" />
     <Content Include="Public\images\frutillaLogo.jpeg" />
